// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nthChildTokenizer should tokenize nthChild 1`] = `
Object {
  "endIdx": 12,
  "n": 12,
  "startIdx": 0,
  "type": "NthChild",
}
`;

exports[`nthChildTokenizer should tokenize nthChild to end of source 1`] = `
Object {
  "endIdx": 11,
  "n": 6,
  "startIdx": 0,
  "type": "NthChild",
}
`;
